fixed not showing information after opening first time(some callback problem, solved by then()).

--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,8 @@ html, body, #root {
 
 .weather-table-masking {
   opacity: 0;
+  position: relative;
+  z-index: 50;
 }
 
 .forecast-display{
