--- a/src/WeatherTable.css
+++ b/src/WeatherTable.css
@@ -3,6 +3,8 @@
     width:65%;
     margin-left:auto; 
     margin-right:auto;
+    position: static;
+    z-index: 50;
 }
 
     .rwd-table tr:nth-of-type(2n) {
